--- a/src/components/Todos/TodoList.css
+++ b/src/components/Todos/TodoList.css
@@ -21,7 +21,7 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-#todoListTbl {
+.todoListTbl {
   width: auto;
   border-width: 1px;
   border-color: black;
